--- a/TUGAS/Main Code/index.html
+++ b/TUGAS/Main Code/index.html
@@ -11,7 +11,7 @@
   <title>Reinder</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light btn-dark">
+    <nav class="navbar navbar-expand-lg navbar-light btn-primary">
         <a class="navbar-brand text-white" href="#">Reinder</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
