--- a/TUGAS/Main Code/index.html
+++ b/TUGAS/Main Code/index.html
@@ -11,7 +11,7 @@
   <title>Reinder</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light btn-primary">
+    <nav class="navbar navbar-expand-lg navbar-light btn-info">
         <a class="navbar-brand text-white" href="#">Reinder</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
           </svg> <span class="badge bg-dark text-white ms-1 rounded-pill"></span> </button>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control " type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0 ml-2" type="submit">Search</button>
+            <button class="btn btn-outline-light my-2 my-sm-0 ml-2" type="submit">Search</button>
           </form>
         </div>
         </div>
